edited resume button and permalink

--- a/index.html
+++ b/index.html
@@ -130,14 +130,9 @@
             With a passion for bringing the latest know-hows to companies that can make a change
           </p>
           <a
-            href="https://github.com/shashwatsuri/Resume/blob/eb869a3644af8d34a97ece0a700bac9ddbdcf67a/research.pdf?raw=true"
+            href="https://github.com/shashwatsuri/Resume/blob/03e647f86d01449a6d01d45180ccb28133d8fa98/main.pdf?raw=true"
             class="btn"
-            >Research Focused Resume</a
-          >
-          <a
-            href="https://github.com/shashwatsuri/Resume/blob/eb869a3644af8d34a97ece0a700bac9ddbdcf67a/industry.pdf?raw=true"
-            class="btn"
-            >Industry Focused Resume</a
+            >Full Resume</a
           >
         </div>
         <div class="content-image">
